# jasmin

./: .env.dev.example  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  REVIEW.md  docker-compose.dev.yml  docker-compose.yml
jasmin-core/django-core/: .dockerignore  Dockerfile  docker_entrypoint.sh  manage.py  pyproject.toml
jasmin-core/django-core/apps/accounts/: apps.py  backends.py  constants.py  errors.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  viewsets.py
jasmin-core/django-core/apps/accounts/migrations/: 0001_initial.py  0002_alter_jasminuser_edit_mode_alter_jasminuser_theme.py  0003_alter_jasminuser_id.py  0003_alter_jasminuser_user_language.py
jasmin-core/django-core/apps/accounts/services/: __init__.py  auth_service.py  email_verification_service.py  friendly_captcha_service.py  password_reset_service.py  registration_service.py  step_up_service.py  two_factor_service.py  user_admin_service.py
jasmin-core/django-core/apps/accounts/tests/: conftest.py  test_admin_role_concurrency.py  test_friendly_captcha_service.py  test_integration_http.py  test_password_reset_and_logout.py  test_self_registration_gate.py  test_services_extra.py  test_status_flow.py  test_status_transitions_matrix.py  test_step_up.py  test_tasks_axes_burst.py  test_throttling.py  test_two_factor.py  test_user_language_choices.py
jasmin-core/django-core/apps/accounts/views/: __init__.py  auth_views.py  two_factor_views.py
jasmin-core/django-core/apps/authz/: apps.py  authentication.py  errors.py  openapi.py  permissions.py  roles.py  scoping.py  tasks.py
jasmin-core/django-core/apps/authz/tests/: conftest.py  test_authentication.py  test_frontend_sync.py  test_permission_matrix.py  test_permissions.py  test_roles.py  test_route_permission_matrix.py  test_scoping.py  test_select_for_update_aggregate_guard.py  test_state_field_update_bypass_guard.py  test_viewset_permission_coverage.py
jasmin-core/django-core/apps/commissioning/: apps.py  constants.py  errors.py  schemas.py  scoping.py  tasks.py  urls.py
jasmin-core/django-core/apps/commissioning/fixtures/: basic_fixtures.json
jasmin-core/django-core/apps/commissioning/migrations/: 0001_initial.py  0002_finalized_protection_and_reference_data.py  0003_remove_sharetype_gets_packed_with.py  0004_rename_is_base_share_type_sharetype_is_additional_share_type.py  0005_alter_sharetype_delivery_cycle.py  0006_alter_sharetype_is_additional_share_type.py  0007_offer_offer_washing_cleaning_mutually_exclusive_and_more.py  0008_alter_deliverystationday_capacity_and_more.py  0009_subscription_waiting_list_reason.py  0010_member_notification_token_and_more.py  0011_backfill_over_default_variation_capacity.py  0012_coopshare_cancellation_reason.py  0013_alter_consentdocument_kind.py  0014_reseller_contact_required.py  0015_content_finalized_one_way.py  0016_sharetype_short_name.py  0017_sharearticle_percentage_added_to_commissioning_list_packing.py  0018_reseller_organic_control_number_organiccertificate.py  0019_purchase_organic_status.py  0020_alter_consentdocument_kind.py  0021_sharetypevariation_allowed_for_trial_subscription.py
jasmin-core/django-core/apps/commissioning/models/: __init__.py  base.py  basics.py  choices.py  choices_text.py  consents.py  days.py  delivery.py  documentation.py  fields.py  imports.py  logs.py  managers.py  markets.py  members.py  mixin.py  movements.py  payments.py  resellers.py  shares.py  snapshots.py
jasmin-core/django-core/apps/commissioning/serializers/: __init__.py  basics_serializer.py  box_matrix_columns_serializer.py  bulk_serializer.py  choices_models_serializer.py  consents_serializer.py  crates_serializer.py  delivery_serializer.py  documentation_serializer.py  dynamic_keys.py  finalize_serializer.py  imports_serializer.py  logs_serializer.py  members_serializer.py  my_data_serializer.py  resellers_serializer.py  serializers_mixin.py  shares_serializer.py  statistics_serializer.py
jasmin-core/django-core/apps/commissioning/services/: __init__.py  additional_share_policy.py  bulk_email_job.py  bulk_operations.py  bulk_results.py  capacity_reservation_service.py  consent_pdf.py  consent_service.py  coop_share_service.py  crate_content_service.py  crate_order_content_service.py  crate_summary.py  current_balance_service.py  data_import.py  default_share_content_service.py  delivery_cycle.py  delivery_exceptions.py  delivery_note_service.py  delivery_station_fee_service.py  documentation_export_service.py  documentation_service.py  documentation_summary_service.py  email_dispatch.py  facturx_pdfa3.py  finalize_utils.py  forecast_service.py  member_email.py  (+34 more)
jasmin-core/django-core/apps/cultivation/: apps.py  schemas.py
jasmin-core/django-core/apps/economics/: apps.py  schemas.py
jasmin-core/django-core/apps/gdpr/: apps.py  errors.py  field_classes.py  models.py  serializers.py  tasks.py  urls.py  views.py  vvt.py
jasmin-core/django-core/apps/notifications/: errors.py  jobs.py  models.py  registry.py  serializers.py  tasks.py  template_renderer.py  urls.py  viewsets.py
jasmin-core/django-core/apps/payments/: apps.py  constants.py  errors.py  models.py  scoping.py  serializers.py  services.py  urls.py  viewsets.py
jasmin-core/django-core/apps/shared/: auth_cookies.py  csp_report.py  csv_safety.py  deferred_email.py  iban_validator.py  invitations.py  languages.py  model_fields.py  money.py  openapi_params.py  pii_logging.py  pii_masking.py  query_params.py  request_utils.py  sepa_mandate_hooks.py  smtp_host_validator.py  subscription_hooks.py  tenant_urls.py
jasmin-core/django-core/apps/staff/: apps.py  constants.py  errors.py  query_params.py  schemas.py  urls.py
jasmin-core/django-core/config/: asgi.py  public_urls.py  settings.py  tenant_urls.py  urls.py  wsgi.py
jasmin-core/django-core/core/: __init__.py  db_locks.py  errors.py  exception_handler.py  middleware.py  openapi.py  pagination.py  protected_media.py  sentry_scrub.py  serializers.py  throttling.py
jasmin-core/django-core/scripts/: seed_pending_members.py
(+1651 files in other folders)
